Make all image vector path. remove a useless api in IClearMine.
git-svn-id: http://hugogu/svn/main/Workspace/Projects/TechnicalResearch/WPF/ClearMine@84 abc3d51d-b5e4-b64c-aea7-7d3d034b83e7

--- a/ClearMine.Dialogs/AboutDialog.xaml
+++ b/ClearMine.Dialogs/AboutDialog.xaml
@@ -17,7 +17,7 @@
                     IsDefault="True" />
         </DockPanel>
         <DockPanel Margin="0,0,0,12">
-            <Border Background="{StaticResource MineImage}"
+            <Border Background="{StaticResource MineBrush}"
                     Width="48" Height="48"
                     UseLayoutRounding="True"
                     Margin="0,0,12,0"/>
