--- a/ClearMine/App.xaml
+++ b/ClearMine/App.xaml
@@ -1,7 +1,8 @@
 ﻿<Application x:Class="ClearMine.App" x:ClassModifier="internal"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             Startup="OnAppStartup">
+             Startup="OnAppStartup"
+             ShutdownMode="OnMainWindowClose">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
