Refine Game Win dialog to show more information and refactoring the Command of Game.
git-svn-id: http://hugogu/svn/main/Workspace/Projects/TechnicalResearch/WPF/ClearMine@85 abc3d51d-b5e4-b64c-aea7-7d3d034b83e7

--- a/ClearMine.Dialogs/GameLostWindow.xaml
+++ b/ClearMine.Dialogs/GameLostWindow.xaml
@@ -3,7 +3,7 @@
               xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
               xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
               WindowStartupLocation="CenterOwner"
-              Message="You lost this game!"
+              Message="Sorry, you lost this game. Better luck next time!"
               Title="Clear Mine - Lost">
     <OptionDialog.Options>
         <x:Array Type="{x:Type Button}">
