--- a/ClearMine.Dialogs/OptionsDialog.xaml
+++ b/ClearMine.Dialogs/OptionsDialog.xaml
@@ -2,9 +2,9 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:c="clr-namespace:ClearMine.Framework.Converters;assembly=ClearMine.Framework"
-        xmlns:m="clr-namespace:ClearMine.Framework.Commands;assembly=ClearMine.Framework"
+        xmlns:h="clr-namespace:ClearMine.Framework.Commands;assembly=ClearMine.Framework"
         xmlns:d="clr-namespace:ClearMine.UI.Dialogs"
-        m:CommandsHelper.LoadBindingsFromVM="True"
+        h:CommandsHelper.LoadBindingsFromVM="True"
         Background="{StaticResource DialogBackground}"
         TextOptions.TextFormattingMode="Display"
         WindowStartupLocation="CenterOwner"
@@ -140,7 +140,7 @@
                     <Button Content="Browse..."
                             Margin="5,0,0,0"
                             DockPanel.Dock="Right"
-                            Command="{x:Static m:OptionsCommands.BrowseHistory}" />
+                            Command="{x:Static h:OptionsCommands.BrowseHistory}" />
                     <TextBox Margin="18,0,0,0"
                              Text="{Binding GameHistoryFolder, ValidatesOnDataErrors=True, ValidatesOnExceptions=True, NotifyOnValidationError=True}"
                              IsEnabled="{Binding SaveGame}" />
