--- a/ClearMine.Dialogs/StatisticsWindow.xaml
+++ b/ClearMine.Dialogs/StatisticsWindow.xaml
@@ -1,9 +1,9 @@
 ﻿<Window x:Class="ClearMine.UI.Dialogs.StatisticsWindow" x:ClassModifier="internal" x:Name="root"
         xmlns:b="clr-namespace:ClearMine.Framework.Behaviors;assembly=ClearMine.Framework"
-        xmlns:c="clr-namespace:ClearMine.Framework.Commands;assembly=ClearMine.Framework"
+        xmlns:h="clr-namespace:ClearMine.Framework.Commands;assembly=ClearMine.Framework"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        c:CommandsHelper.LoadBindingsFromVM="True"
+        h:CommandsHelper.LoadBindingsFromVM="True"
         Background="{StaticResource DialogBackground}"
         TextOptions.TextFormattingMode="Display"
         WindowStartupLocation="CenterOwner"
@@ -59,7 +59,7 @@
         <DockPanel DockPanel.Dock="Bottom" LastChildFill="False">
             <Button Content="_Reset"
                     CommandParameter="{Binding HistoryList}"
-                    Command="{x:Static c:StatisticsCommands.Reset}" />
+                    Command="{x:Static h:StatisticsCommands.Reset}" />
             <Button Content="OK" IsDefault="True"
                     IsCancel="True" DockPanel.Dock="Right" />
         </DockPanel>
