--- a/ClearMine.Framework/Themes/Generic.xaml
+++ b/ClearMine.Framework/Themes/Generic.xaml
@@ -1,4 +1,4 @@
-<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:local="clr-namespace:ClearMine.Framework.Dialogs"
                     xmlns:con="clr-namespace:ClearMine.Framework.Controls"
@@ -22,6 +22,58 @@
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type local:OptionDialog}">
+                    <ControlTemplate.Resources>
+                        <Storyboard x:Key="showDetails">
+                            <DoubleAnimationUsingKeyFrames Storyboard.TargetProperty="(UIElement.Opacity)" Storyboard.TargetName="separator1">
+                                <EasingDoubleKeyFrame KeyTime="0:0:0.3" Value="1">
+                                    <EasingDoubleKeyFrame.EasingFunction>
+                                        <CircleEase EasingMode="EaseOut"/>
+                                    </EasingDoubleKeyFrame.EasingFunction>
+                                </EasingDoubleKeyFrame>
+                            </DoubleAnimationUsingKeyFrames>
+                            <DoubleAnimationUsingKeyFrames Storyboard.TargetProperty="(FrameworkElement.LayoutTransform).(ScaleTransform.ScaleY)"
+                                                           Storyboard.TargetName="contentpanel">
+                                <EasingDoubleKeyFrame KeyTime="0:0:0.3" Value="1" >
+                                    <EasingDoubleKeyFrame.EasingFunction>
+                                        <CircleEase EasingMode="EaseOut"/>
+                                    </EasingDoubleKeyFrame.EasingFunction>
+                                </EasingDoubleKeyFrame>
+                            </DoubleAnimationUsingKeyFrames>
+                            <DoubleAnimationUsingKeyFrames Storyboard.TargetProperty="(UIElement.Opacity)"
+                                                           Storyboard.TargetName="contentpanel">
+                                <EasingDoubleKeyFrame KeyTime="0:0:0.3" Value="1">
+                                    <EasingDoubleKeyFrame.EasingFunction>
+                                        <CubicEase EasingMode="EaseIn"/>
+                                    </EasingDoubleKeyFrame.EasingFunction>
+                                </EasingDoubleKeyFrame>
+                            </DoubleAnimationUsingKeyFrames>
+                        </Storyboard>
+                        <Storyboard x:Key="hideDetails">
+                            <DoubleAnimationUsingKeyFrames Storyboard.TargetProperty="(UIElement.Opacity)" Storyboard.TargetName="separator1">
+                                <EasingDoubleKeyFrame KeyTime="0:0:0.2" Value="0">
+                                    <EasingDoubleKeyFrame.EasingFunction>
+                                        <CircleEase EasingMode="EaseOut"/>
+                                    </EasingDoubleKeyFrame.EasingFunction>
+                                </EasingDoubleKeyFrame>
+                            </DoubleAnimationUsingKeyFrames>
+                            <DoubleAnimationUsingKeyFrames Storyboard.TargetProperty="(FrameworkElement.LayoutTransform).(ScaleTransform.ScaleY)"
+                                                           Storyboard.TargetName="contentpanel">
+                                <EasingDoubleKeyFrame KeyTime="0:0:0.2" Value="0">
+                                    <EasingDoubleKeyFrame.EasingFunction>
+                                        <CircleEase EasingMode="EaseOut"/>
+                                    </EasingDoubleKeyFrame.EasingFunction>
+                                </EasingDoubleKeyFrame>
+                            </DoubleAnimationUsingKeyFrames>
+                            <DoubleAnimationUsingKeyFrames Storyboard.TargetProperty="(UIElement.Opacity)"
+                                                           Storyboard.TargetName="contentpanel">
+                                <EasingDoubleKeyFrame KeyTime="0:0:0.2" Value="0">
+                                    <EasingDoubleKeyFrame.EasingFunction>
+                                        <CubicEase EasingMode="EaseOut"/>
+                                    </EasingDoubleKeyFrame.EasingFunction>
+                                </EasingDoubleKeyFrame>
+                            </DoubleAnimationUsingKeyFrames>
+                        </Storyboard>
+                    </ControlTemplate.Resources>
                     <DockPanel Background="{TemplateBinding Background}">
                         <DockPanel DockPanel.Dock="Top">
                             <Image Source="{TemplateBinding ImageSource}"
@@ -31,34 +83,49 @@
                                        Margin="0,12,12,12"
                                        Foreground="#FF003399" />
                         </DockPanel>
-                        <DockPanel LastChildFill="False"
-                                   DockPanel.Dock="Bottom"
-                                   Background="#FFF0F0F0">
-                            <Expander x:Name="detailExpander"
-                                      Header="Show more details"
-                                      Margin="12"
-                                      Visibility="{Binding Content, RelativeSource={RelativeSource TemplatedParent}, Converter={StaticResource ObjectToVisibilityConverter}}"/>
-                            <ItemsControl DockPanel.Dock="Right"
-                                          Margin="0,12,12,12"
-                                          ItemsSource="{TemplateBinding Options}">
-                                <ItemsControl.ItemsPanel>
-                                    <ItemsPanelTemplate>
-                                        <VirtualizingStackPanel Orientation="Horizontal" />
-                                    </ItemsPanelTemplate>
-                                </ItemsControl.ItemsPanel>
-                            </ItemsControl>
-                        </DockPanel>
-                        <Separator Margin="0"
+                        <con:AutoTransformPanel DockPanel.Dock="Bottom">
+                            <DockPanel LastChildFill="False"
+                                       Background="#FFF0F0F0">
+                                <Expander x:Name="detailExpander"
+                                          Header="Show more details"
+                                          Margin="12"
+                                          Visibility="{Binding Content, RelativeSource={RelativeSource TemplatedParent}, Converter={StaticResource ObjectToVisibilityConverter}}" />
+                                <ItemsControl DockPanel.Dock="Right"
+                                              Margin="0,12,12,12"
+                                              ItemsSource="{TemplateBinding Options}">
+                                    <ItemsControl.ItemsPanel>
+                                        <ItemsPanelTemplate>
+                                            <VirtualizingStackPanel Orientation="Horizontal" />
+                                        </ItemsPanelTemplate>
+                                    </ItemsControl.ItemsPanel>
+                                </ItemsControl>
+                            </DockPanel>
+                        </con:AutoTransformPanel>
+                        <Separator x:Name="separator" Margin="0"
                                    DockPanel.Dock="Bottom"
                                    Foreground="#FFDFDFDF" />
-                        <Separator Margin="0"
-                                   Visibility="{Binding IsExpanded, ElementName=detailExpander, Converter={StaticResource BooleanToVisibilityConverter}}"
+                        <Separator x:Name="separator1" Margin="0"
                                    DockPanel.Dock="Top"
+                                   Opacity="0"
                                    Foreground="#FFDFDFDF" />
-                        <AdornerDecorator Visibility="{Binding IsExpanded, ElementName=detailExpander, Converter={StaticResource BooleanToVisibilityConverter}}">
-                            <ContentPresenter />
+                        <AdornerDecorator x:Name="adornerDecorator">
+                            <ContentPresenter x:Name="contentpanel" Opacity="0">
+                                <ContentPresenter.LayoutTransform>
+                                    <ScaleTransform ScaleY="0" />
+                                </ContentPresenter.LayoutTransform>
+                            </ContentPresenter>
                         </AdornerDecorator>
                     </DockPanel>
+                    <ControlTemplate.Triggers>
+                        <Trigger Property="IsExpanded" Value="True" SourceName="detailExpander">
+                            <Trigger.ExitActions>
+                                <BeginStoryboard x:Name="hideDetails_BeginStoryboard" Storyboard="{StaticResource hideDetails}"/>
+                            </Trigger.ExitActions>
+                            <Trigger.EnterActions>
+                                <BeginStoryboard x:Name="showDetails_BeginStoryboard" Storyboard="{StaticResource showDetails}"/>
+                            </Trigger.EnterActions>
+                        </Trigger>
+                    </ControlTemplate.Triggers>
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
