--- a/ClearMine.Framework/Themes/Generic.xaml
+++ b/ClearMine.Framework/Themes/Generic.xaml
@@ -2,6 +2,7 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:local="clr-namespace:ClearMine.Framework.Dialogs"
                     xmlns:con="clr-namespace:ClearMine.Framework.Controls"
+                    xmlns:e="clr-namespace:ClearMine.Effects;assembly=ClearMine.Effects"
                     xmlns:c="clr-namespace:ClearMine.Framework.Converters">
     <c:LightUpsToBooleanConverter x:Key="LightUpsToBooleanConverter" />
     <c:ObjectToVisibilityConverter x:Key="ObjectToVisibilityConverter" />
