--- a/ClearMine.Themes/Themes/luna.normalcolor.xaml
+++ b/ClearMine.Themes/Themes/luna.normalcolor.xaml
@@ -1,5 +1,6 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                    xmlns:c="clr-namespace:ClearMine.Framework.Controls;assembly=ClearMine.Framework"
                     xmlns:b="clr-namespace:ClearMine.Framework.Behaviors;assembly=ClearMine.Framework"
                     xmlns:d="clr-namespace:System.Windows.Media;assembly=PresentationCore"
                     xmlns:logic="clr-namespace:ClearMine.Common.Logic;assembly=ClearMine.Common">
@@ -166,11 +167,20 @@
         </DrawingBrush.Drawing>
     </DrawingBrush>
 
-    <DrawingBrush x:Key="FlagBrush"
+    <WaveEffect x:Key="waveEffect" />
+
+    <VisualBrush x:Key="FlagBrush"
                   Stretch="Uniform"
                   Viewbox="{StaticResource FaceViewbox}">
-        <DrawingBrush.Drawing>
-            <DrawingGroup>
+        <VisualBrush.Visual>
+            <Grid>
+                <Path Data="M0,2.5 L5,0 L5,5 L4,5 Z"
+                      Effect="{StaticResource waveEffect}"
+                      b:AnimateEffectBehavior.Waving="True"
+                      Fill="Red" />
+                <Path Data="M0,9 H8 M2,8 H6 M4,6 H5" Stroke="Black" StrokeThickness="2"/>
+            </Grid>
+            <!--<DrawingGroup>
                 <GeometryDrawing Geometry="M0,2.5 L5,0 L5,5 L4,5 Z"
                                  Brush="Red" />
                 <GeometryDrawing Geometry="M0,9 H8 M2,8 H6 M4,6 H5">
@@ -179,9 +189,9 @@
                              Thickness="2" />
                     </GeometryDrawing.Pen>
                 </GeometryDrawing>
-            </DrawingGroup>
-        </DrawingBrush.Drawing>
-    </DrawingBrush>
+            </DrawingGroup>-->
+        </VisualBrush.Visual>
+    </VisualBrush>
 
     <DrawingBrush x:Key="QuestionBrush"
                   Stretch="Uniform"
@@ -430,7 +440,7 @@
         </DrawingBrush.Drawing>
     </DrawingBrush>
 
-    <Style TargetType="{x:Type MineCellControl}">
+    <Style TargetType="{x:Type c:MineCellControl}">
         <Style.Triggers>
             <Trigger Property="IsPressed"
                      Value="True">
